# mumsmums

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE.bazel  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: build-and-test.yaml  ci.yaml  deploy.yaml  deploy.yml
bazel/: BUILD.bazel  all_targets.bazelproject
bazel/junit5/: defs.bzl
ci/: build-sources.sh  build.sh  certbot-renew.sh  copy-sources.sh  pr-build-client.sh  pr-build-server.sh  pr-build.sh  run-tests.sh
cloud-formation/: dynamodb-stack.yaml  mumsmums-stack.yaml
config/: nginx.conf
docker/: Caddyfile  certbot.Dockerfile  mumsmums.Dockerfile  next.Dockerfile
scripts/: create-admin-user.sh  export-recipes.sh  mumsmums  setup-local-env.sh  update-dns.sh
sqlite/: mumsmums.db  recipes.db
src/client/: .babelrc  .eslintrc  .gitignore  codegen.ts  eslint.config.mjs  globals.css  index.js  jest-environment-jsdom-with-reconfigure.js  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo  webpack.common.js  webpack.config.js  webpack.dev.js
src/client/app/: sitemap.ts
src/client/components/AutocompletePicker/: AutocompletePicker.module.css  AutocompletePicker.test.tsx  AutocompletePicker.tsx
src/client/components/CategoryFilter/: CategoryFilter.module.css  CategoryFilter.tsx
src/client/components/ErrorMessage/: ErrorMessage.module.css  ErrorMessage.tsx
src/client/components/HeroSection/: HeroSection.module.css  HeroSection.test.tsx  HeroSection.tsx
src/client/components/HomeIcon/: HomeIcon.tsx
src/client/components/Icon/: Icon.module.css  Icon.test.tsx  Icon.tsx
src/client/components/ImageGrid/: ImageGrid.module.css  ImageGrid.tsx
src/client/components/ImageUpload/: ImageUpload.module.css  ImageUpload.tsx
src/client/components/IngredientForm/: IngredientForm.module.css  IngredientForm.tsx
src/client/components/IngredientRowEditor/: IngredientRowEditor.module.css  IngredientRowEditor.test.tsx  IngredientRowEditor.tsx
src/client/components/IngredientSearch/: IngredientSearch.module.css  IngredientSearch.test.tsx  IngredientSearch.tsx
src/client/components/IngredientsCard/: IngredientsCard.module.css  IngredientsCard.test.tsx  IngredientsCard.tsx
src/client/components/LocaleSwitcher/: LocaleSwitcher.module.css  LocaleSwitcher.tsx
src/client/components/Modal/: Modal.module.css  Modal.test.tsx  Modal.tsx
src/client/constants/: environment.ts  featureFlags.ts  hosts.ts  urls.test.ts  urls.ts
src/client/graphql/: client.ts  queries.ts  types.ts
src/client/hooks/: index.ts  useCategories.ts  useCreateIngredientModal.test.ts  useCreateIngredientModal.ts  useIngredients.test.ts  useIngredients.ts  useUnits.test.ts  useUnits.ts
src/client/i18n/: getMessages.ts  index.ts  localized.test.ts  localized.ts
src/client/messages/: en.json  sv.json
src/client/pages/: _app.tsx  _document.tsx  index.tsx
src/client/public/: index.html  robots.txt
src/client/seo/: recipeJsonLd.test.ts  recipeJsonLd.ts
src/client/src/: App.js
src/client/styles/: dark.css  globals.css  light.css  palette.css
src/client/test-utils/: renderWithIntl.tsx
src/scripts/jvmMain/kotlin/app/mumsmums/: BUILD.bazel  DeleteRecipeItem.kt  GetRecipeItem.kt  InitializeDb.kt  JsonParser.kt  PutRecipeItem.kt  UpdateRecipeItem.kt
src/scripts/jvmMain/kotlin/app/mumsmums/resources/: BUILD.bazel  recipe.json  recipes.json
src/server/jvmMain/kotlin/app/mumsmums/: Application.kt  BUILD.bazel
src/server/jvmMain/kotlin/app/mumsmums/auth/: AuthHandler.kt  BUILD.bazel  JwtConfig.kt  PasswordHasher.kt
src/server/jvmMain/kotlin/app/mumsmums/constants/: BUILD.bazel  Constants.kt
src/server/jvmMain/kotlin/app/mumsmums/data/: BUILD.bazel  Recipes.kt
src/server/jvmMain/kotlin/app/mumsmums/db/: BUILD.bazel  CategoryTable.kt  Database.kt  DatabaseConnection.kt  DynamoClientFactory.kt  DynamoTable.kt  IngredientBaseTable.kt  IngredientLibraryTable.kt  IngredientTable.kt  Mapper.kt  MumsMumsTable.kt  RecipeRepository.kt  RecipeTable.kt  RecipesDatabase.kt  RecipesTable.kt  SqliteExtensions.kt  SqliteRecipeTable.kt  SqliteRecipesDatabase.kt  TemporaryCredentialsProvider.kt  UnitLibraryTable.kt  UnitTable.kt  UsersTable.kt
src/server/jvmMain/kotlin/app/mumsmums/environment/: BUILD.bazel  Environment.kt
src/server/jvmMain/kotlin/app/mumsmums/filesystem/: BUILD.bazel  MumsMumsPaths.kt
src/server/jvmMain/kotlin/app/mumsmums/identifiers/: BUILD.bazel  NumericIdGenerator.kt
src/server/jvmMain/kotlin/app/mumsmums/images/: BUILD.bazel  ImageUploadHandler.kt
src/server/jvmMain/kotlin/app/mumsmums/json/: BUILD.bazel  JsonParser.kt
src/server/jvmMain/kotlin/app/mumsmums/logging/: BUILD.bazel  MumsMumsLogger.kt
src/server/jvmMain/kotlin/app/mumsmums/model/: BUILD.bazel  Category.kt  Ingredient.kt  IngredientBase.kt  IngredientSection.kt  LibraryIngredient.kt  LibraryUnit.kt  NewRecipe.kt  Recipe.kt  RecipeReference.kt  User.kt
src/server/jvmMain/kotlin/app/mumsmums/plugins/: Auth.kt  AuthRoutes.kt  BUILD.bazel  Cors.kt  GraphQL.kt  Headers.kt  ImageUpload.kt  Routing.kt  Security.kt  Serialization.kt  StaticFiles.kt
src/server/jvmMain/kotlin/app/mumsmums/revalidation/: BUILD.bazel  RevalidationClient.kt
src/server/jvmMain/kotlin/app/mumsmums/time/: BUILD.bazel  TimeProvider.kt
src/server/jvmTest/kotlin/app/mumsmums/auth/test/: AuthHandlerTest.kt  BUILD.bazel  JwtConfigTest.kt  PasswordHasherTest.kt
src/server/jvmTest/kotlin/app/mumsmums/db/test/: BUILD.bazel  CategoryTableTest.kt  IngredientBaseTableTest.kt  IngredientLibraryTableTest.kt  IngredientTableTest.kt  RecipesTableTest.kt  SqliteExtensionsTest.kt  SqliteRecipesDatabaseTest.kt  UnitLibraryTableTest.kt  UnitTableTest.kt  UsersTableTest.kt
src/server/jvmTest/kotlin/app/mumsmums/identifiers/test/: BUILD.bazel  NumericIdGeneratorTest.kt
src/server/jvmTest/kotlin/app/mumsmums/images/test/: BUILD.bazel  ImageUploadHandlerTest.kt
src/server/jvmTest/kotlin/app/mumsmums/plugins/test/: BUILD.bazel  GraphQLAuthTest.kt
(+103 files in other folders)
