module(
    name = "mumsmums",
    version = "1.0",
)

# Kotlin rules
bazel_dep(name = "rules_kotlin", version = "2.2.1")

# JVM external rules
bazel_dep(name = "rules_jvm_external", version = "6.9")

# Java rules (needed for java_binary with _deploy.jar support in Bazel 9)
bazel_dep(name = "rules_java", version = "9.3.0")

# JVM contrib rules (JUnit 5 test runner)
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# Transitive dependency via rules_kotlin. Without this pin, 0.6.4 is resolved
# which fails to load on Linux CI under Bazel 9.
# 0.7.0 is the first release with explicit Bazel 9 compatibility.
bazel_dep(name = "rules_android", version = "0.7.0")

# Register Kotlin toolchain
register_toolchains("//bazel:kotlin_toolchain")

# Use JVM external extension for Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Exclude junit:junit from mockk to avoid testonly conflicts
maven.artifact(
    testonly = True,
    artifact = "mockk",
    exclusions = ["junit:junit"],
    group = "io.mockk",
    version = "1.13.5",
)
maven.artifact(
    testonly = True,
    artifact = "mockk-jvm",
    exclusions = ["junit:junit"],
    group = "io.mockk",
    version = "1.13.5",
)
maven.artifact(
    testonly = True,
    artifact = "ktor-server-test-host-jvm",
    group = "io.ktor",
    version = "2.3.2",
)
maven.install(
    artifacts = [
        "at.favre.lib:bcrypt:0.10.2",
        # byte-buddy is a transitive dependency of mockk, used for runtime class
        # generation when creating mocks. Pinned here because rules_jvm_external@6.9
        # otherwise resolves to 1.12.20 which doesn't support Java 21.
        "net.bytebuddy:byte-buddy:1.15.11",
        "net.bytebuddy:byte-buddy-agent:1.15.11",
        "ch.qos.logback:logback-classic:1.5.12",
        "com.auth0:java-jwt:4.4.0",
        "com.apurebase:kgraphql-ktor:0.19.0",
        "com.apurebase:kgraphql:0.19.0",
        "io.ktor:ktor-client-cio-jvm:2.3.2",
        "io.ktor:ktor-client-core-jvm:2.3.2",
        "io.ktor:ktor-serialization-kotlinx-json-jvm:2.3.2",
        "io.ktor:ktor-server-auth-jvm:2.3.2",
        "io.ktor:ktor-server-auth-jwt-jvm:2.3.2",
        "io.ktor:ktor-server-content-negotiation-jvm:2.3.2",
        "io.ktor:ktor-server-core-jvm:2.3.2",
        "io.ktor:ktor-server-cors-jvm:2.3.2",
        "io.ktor:ktor-server-forwarded-header-jvm:2.3.2",
        "io.ktor:ktor-server-host-common-jvm:2.3.2",
        "io.ktor:ktor-server-netty-jvm:2.3.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0",
        "org.junit.jupiter:junit-jupiter-api:5.11.4",
        "org.junit.jupiter:junit-jupiter-engine:5.11.4",
        "org.junit.jupiter:junit-jupiter-params:5.11.4",
        "org.junit.platform:junit-platform-commons:1.11.4",
        "org.junit.platform:junit-platform-console:1.11.4",
        "org.junit.platform:junit-platform-engine:1.11.4",
        "org.junit.platform:junit-platform-launcher:1.11.4",
        "org.junit.platform:junit-platform-reporting:1.11.4",
        "org.junit.platform:junit-platform-suite-api:1.11.4",
        "org.xerial:sqlite-jdbc:3.47.1.0",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
