load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/plugins",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:io_ktor_ktor_server_core_jvm",
        "@maven//:io_ktor_ktor_server_netty_jvm",
    ],
)

java_binary(
    name = "mumsmums",
    main_class = "app.mumsmums.ApplicationKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
