load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "auth",
    srcs = glob(["*.kt"]),
    visibility = [
        "//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__",
        "//src/server/jvmTest/kotlin/app/mumsmums:__subpackages__",
    ],
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/db",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
        "@maven//:at_favre_lib_bcrypt",
    ],
)
