load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "db",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "DynamoClientFactory.kt",
            "DynamoTable.kt",
            "Mapper.kt",
            "MumsMumsTable.kt",
            "RecipeTable.kt",
            "TemporaryCredentialsProvider.kt",
        ],
    ),
    plugins = ["//bazel:serialization"],
    visibility = [
        "//src/scripts/jvmMain/kotlin/app/mumsmums:__subpackages__",
        "//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__",
    ],
    deps = [
        "//src/scripts/jvmMain/kotlin/app/mumsmums/resources:recipes",
        "//src/server/jvmMain/kotlin/app/mumsmums/identifiers",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
        "@maven//:org_xerial_sqlite_jdbc",
    ],
)
