load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "db",
    srcs = glob(["*.kt"]),
    plugins = ["//bazel:serialization"],
    visibility = [
        "//src/scripts/jvmMain/kotlin/app/mumsmums:__subpackages__",
        "//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__",
        "//src/server/jvmTest/kotlin/app/mumsmums:__subpackages__",
    ],
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/filesystem",
        "//src/server/jvmMain/kotlin/app/mumsmums/identifiers",
        "//src/server/jvmMain/kotlin/app/mumsmums/logging",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
        "@maven//:org_xerial_sqlite_jdbc",
    ],
)
