load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "images",
    srcs = glob(["*.kt"]),
    visibility = ["//src/server:__subpackages__"],
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/db",
        "//src/server/jvmMain/kotlin/app/mumsmums/logging",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
    ],
)
