load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "json",
    srcs = glob(["*.kt"]),
    visibility = [
        "//src/scripts/jvmMain/kotlin/app/mumsmums:__subpackages__",
        "//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__",
    ],
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/identifiers",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
    ],
)
