load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "model",
    srcs = glob(["*.kt"]),
    plugins = ["//bazel:serialization"],
    visibility = ["//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__"],
    deps = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)
