load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "plugins",
    srcs = glob(["*.kt"]),
    visibility = ["//src/server/jvmMain/kotlin/app/mumsmums:__subpackages__"],
    plugins = ["//bazel:serialization"],
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/auth",
        "//src/server/jvmMain/kotlin/app/mumsmums/db",
        "//src/server/jvmMain/kotlin/app/mumsmums/logging",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
        "@maven//:com_apurebase_kgraphql",
        "@maven//:com_apurebase_kgraphql_ktor",
        "@maven//:io_ktor_ktor_serialization_kotlinx_json_jvm",
        "@maven//:io_ktor_ktor_server_auth_jvm",
        "@maven//:io_ktor_ktor_server_auth_jwt_jvm",
        "@maven//:io_ktor_ktor_server_content_negotiation_jvm",
        "@maven//:io_ktor_ktor_server_core_jvm",
        "@maven//:io_ktor_ktor_server_cors_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)
