load("//bazel/junit5:defs.bzl", "kt_jvm_junit5_test")

kt_jvm_junit5_test(
    name = "test",
    size = "small",
    srcs = glob(["*.kt"]),
    associates = ["//src/server/jvmMain/kotlin/app/mumsmums/db"],
    test_package = "app.mumsmums.db.test",
    deps = [
        "//src/server/jvmMain/kotlin/app/mumsmums/identifiers",
        "//src/server/jvmMain/kotlin/app/mumsmums/model",
        "//src/server/jvmMain/kotlin/app/mumsmums/time",
        "@maven//:io_mockk_mockk",
        "@maven//:io_mockk_mockk_jvm",
        "@maven//:org_xerial_sqlite_jdbc",
    ],
)
